--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "tod_calulator",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bulma": "^0.7.2",
+    "vue": "^2.5.21"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oalkabouss/TodCalculator.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/oalkabouss/TodCalculator/issues"
+  },
+  "homepage": "https://github.com/oalkabouss/TodCalculator#readme",
+  "description": ""
 }
