--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.7.7",
+    "angular-mocks": "^1.7.7",
     "bulma": "^0.7.2",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "jsdom": "^13.2.0",
+    "sinon-chai": "^3.3.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2"
+    "@fortawesome/fontawesome-free": "^5.7.2",
+    "chai": "^4.2.0",
+    "jasmine-core": "^3.3.0",
+    "karma": "^4.0.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "mocha": "^6.0.0",
+    "sinon": "^7.2.4"
   },
   "repository": {
     "type": "git",
